# Augur

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/release/: augur-os-rebrand-verification.md
references/: augur-os.html  scoring.html
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  orchestration.rs
src-tauri/src/apollo/: mod.rs
src-tauri/src/commands/: database.rs  research.rs  settings.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/jobs/: completion_handler.rs  queue.rs  recovery.rs  result_parser.rs  stream_processor.rs
src-tauri/src/prompts/: mod.rs
src-tauri/src/prompts/agents/: business-model-strategist.md  buyer-profile-synthesizer.md  competitive-position-analyst.md  pain-diagnostician.md  people-finder.md  synthesizer.md  tech-stack-analyst.md  trigger-signal-analyst.md  verifier.md
src-tauri/src/prompts/defaults/: company.md  conversation_topics.md  person.md
src/components/: command-palette.tsx
src/components/brand/: augur-mark.tsx
src/components/layout/: agent-dock.tsx  app-background.tsx  chrome-toggle.tsx  cost-pill.tsx  editor-card.tsx  entity-detail-layout.tsx  hero.tsx  main-shell.tsx  orchestration-controls.tsx  page-header.tsx  right-rail.tsx  (+3 more)
src/lib/: copy.ts
src/pages/: prompt.tsx  scoring.tsx
(+68 files in other folders)
