[package]
name = "augur-os"
version = "0.2.1"
edition = "2021"
description = "Lead research and signal scoring system"
authors = [""]
license = "Apache-2.0"
repository = "https://github.com/DivyamTalwar/Augur"
default-run = "augur-os"

[lib]
name = "augur_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "augur-os"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "5"
which = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"

# Unix signal handling for graceful process shutdown
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
